<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="register_button">Register</string>
    <string name="login_button">LOGIN</string>
    <string name="login_google_button">Login with Google</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_name">User Name</string>
    <string name="ver_1_0">Ver : 1.0</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cart">Cart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_error_message">Enter all the fields</string>
    <string name="login_error_title">Shopping Cart</string>
    <string name="account_login">Account login</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="reset">Clear</string>
    <string name="LAST_REGISTERATION">Last Register ID</string>
    <string name="select_items">Select items</string>
    <string name="add_all">Add All</string>
    <string name="orderdetail">Order Detail</string>
    <string name="menu_cart_title">Cart</string>
    <string name="MENU_PROFILE_TITLE">Profile</string>
    <string name="menu_order_title">Order Detail</string>
    <string name="menu_home_title">Home</string>
    <string name="FETCH_DATA">Fetching Data..</string>
    <string name="MYPREF">MyPref</string>
    <string name="USERNAME">UserName</string>
    <string name="EMAIL">Email</string>
    <string name="MOBILE">Mobile</string>
    <string name="ADDRESS">Address</string>
    <string name="DOB">DOB</string>
    <string name="PASSWORD">Password</string>
    <string name="SUCCESSFUL_REGISTERATION_MSG">Registered Successfully</string>
    <string name="logout_message">Are you sure want to Logout?</string>
    <string name="CURRENT_USER_KEY">CURRENT_USER_KEY</string>
    <string name="items_in_cart">Items in Cart</string>
    <string name="no_items_in_cart">No items in Cart !</string>
    <string name="place_order">Place Order</string>
    <string name="born_day">Born day</string>
    <string name="home">Home</string>
    <string name="add_cart_message1">Select items to add cart</string>
    <string name="pId">Prod ID</string>
    <string name="pName">Name</string>
    <string name="pDesc">Desc</string>
    <string name="order_confirmation_title">Confirm Order</string>
    <string name="order_confirmation_MSG">Are you sure ?</string>
    <string name="no_data_found">No data found!</string>
    <string name="delete_confirmation_msg">Do you want to delete this item from cart ?</string>
    <string name="exit_alert_message">Do you want to exit ?</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="good_day">Good Day !</string>
    <string name="hi">Hi,</string>
    <string name="please_sign_up_to_continue">Please sign up to continue.</string>
    <string name="load_data">Loading Data</string>
    <string name="common_load_message">Loading..</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="order_confirmed">Order has been confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="item_deleted">Item has been deleted</string>
    <string name="clear_cart">Clear Cart</string>

    <string name="RPS_PERMISSION">\nKotak Bank App requires “Make and Manage phone calls” permission for the app to work.\n"</string>
    <string name="RPS_PERMISSION1">\n(Please allow this permission by visiting Settings > Apps > Kotak Bank > Permission)</string>
    <string name="menu_contact">Contact</string>
    <string name="click_here_to_load_contacts">Click Here to load Contacts</string>
    <string name="count">Count :</string>
</resources>
