<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/orderDetail"
            android:icon="@drawable/ic_orddet"
            android:title="@string/orderdetail" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/contacts"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_contact" />

    </group>
</menu>