<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e1e1e1">


    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/items_in_cart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_placeorder"
        android:layout_below="@+id/layout_total"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_nodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_items_in_cart"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />


    <Button
        android:id="@+id/btn_placeorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:background="@android:color/holo_blue_dark"
        android:padding="16dp"
        android:text="@string/place_order"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_clearCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_blue_dark"
        android:padding="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/clear_cart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"/>

</RelativeLayout>