<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:padding="12dp"
    tools:context=".Login.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="37dp"
             android:layout_marginLeft="30dp">
             <ImageView
                 android:id="@+id/sback"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/left"
                 android:padding="10dp"
                 android:layout_gravity="center" />
         </LinearLayout>-->
<!--        <ImageView-->
<!--            android:layout_width="90dp"-->
<!--            android:layout_height="90dp"-->
<!--            android:background="@mipmap/ic_launcher"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="100dp"-->
<!--            />-->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="Sign up"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hi,"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Welcome"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:text="@string/please_sign_up_to_continue"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>
            <EditText
                android:textSize="16sp"
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:textColor="@android:color/black"
                android:inputType="date"
                android:background="#0000"
                android:padding="16dp"
                android:clickable="true"
                android:imeOptions="actionNext"
                android:focusable="false"
                android:drawableEnd="@android:drawable/ic_menu_day"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/holo_blue_light"/>
            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/submit_btn"
                android:textSize="16sp"
                android:textColor="#fff"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
