<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

<!--    <androidx.appcompat.widget.SearchView-->
<!--        android:id="@+id/searchView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/cardview_light_background"-->
<!--        android:saveEnabled="true"-->
<!--        android:visibility="gone"-->
<!--        app:defaultQueryHint="@string/select_items"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b0e0e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_search_with_corner"
            android:drawableEnd="@android:drawable/ic_menu_search"
            android:hint="@string/search"
            android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#c7c7c7"
            android:textSize="14sp"
            android:windowSoftInputMode="stateHidden" />
    </LinearLayout>

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/tbToolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="top"-->
    <!--        app:contentInsetLeft="0dp"-->
    <!--        app:contentInsetStart="0dp"-->
    <!--        android:background="@android:color/holo_blue_dark"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <include layout="@layout/common_header" />-->

    <!--    </androidx.appcompat.widget.Toolbar>-->


    <!--    <Button-->
    <!--        android:id="@+id/select_items"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:gravity="start"-->
    <!--        android:padding="16dp"-->
    <!--        android:text="@string/select_items"-->
    <!--        android:onClick="selectAll"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@android:color/holo_blue_dark"-->
    <!--        android:textSize="12sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/container"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.04"-->
    <!--        android:visibility="gone"/>-->

    <!--    <Button-->
    <!--        android:id="@+id/deselect_items"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="48dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:gravity="center"-->
    <!--        android:onClick="deselectAll"-->
    <!--        android:padding="16dp"-->
    <!--        android:text="Clear Selection"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@android:color/holo_blue_dark"-->
    <!--        android:textSize="12sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/container"-->
    <!--        app:layout_constraintStart_toEndOf="@id/select_items"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        android:visibility="gone"/>-->

    <FrameLayout
        android:id="@+id/containerFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_cart"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:longClickable="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:visibility="gone" />


    </FrameLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/add_cart"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end|bottom"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="@android:color/white"-->
<!--        android:backgroundTint="@android:color/white"-->
<!--        android:src="@drawable/add_cart"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

        <Button
            android:id="@+id/add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_blue_dark"
            android:padding="16dp"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerFrame"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>